# rpglot

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
crates/rpglot/: Cargo.toml
crates/rpglot-core/: Cargo.toml  build.rs
crates/rpglot-core/src/: fmt.rs  lib.rs  rates.rs  table.rs
crates/rpglot-core/src/analysis/: mod.rs
crates/rpglot-core/src/analysis/advisor/: mod.rs  recommendations.rs
crates/rpglot-core/src/analysis/rules/: cgroup.rs  cpu.rs  disk.rs  load.rs  memory.rs  mod.rs  network.rs  pg_activity.rs  pg_bgwriter.rs  pg_errors.rs  pg_events.rs  pg_indexes.rs  pg_locks.rs  pg_plans.rs  pg_statements.rs  pg_tables.rs  process_blkdelay.rs  process_io.rs
crates/rpglot-core/src/api/: convert.rs  mod.rs  schema.rs  snapshot.rs
crates/rpglot-core/src/collector/: collector.md  collector.rs  mod.rs  traits.rs
crates/rpglot-core/src/collector/log_collector/: mod.rs  normalize.rs  parser.rs  tailer.rs
crates/rpglot-core/src/collector/mock/: filesystem.rs  mod.rs  scenarios.rs
crates/rpglot-core/src/collector/pg_collector/: activity.rs  indexes.rs  locks.rs  mod.rs  progress_vacuum.rs  queries.rs  replication.rs  settings.rs  statements.rs  store_plans.rs  tables.rs
crates/rpglot-core/src/collector/procfs/: parser.rs  process.rs  system.rs
crates/rpglot-core/src/models/: formatting.rs  mod.rs  process_row.rs
crates/rpglot-core/src/provider/: history.rs  live.rs  mod.rs  provider.md
crates/rpglot-core/src/storage/: chunk.rs  chunk_v2.rs  heatmap.rs  interner.rs  manager.rs  metrics.rs  mod.rs  storage.md
crates/rpglot-core/src/storage/model/: mod.rs  postgres.rs  process.rs  snapshot.rs
crates/rpglot-core/src/tui/: app.rs  event.rs  fmt.rs  input.rs  mod.rs  navigable.rs  render.rs  style.rs  table.rs
crates/rpglot-core/src/tui/models/: mod.rs  process_row.rs
crates/rpglot-core/src/tui/state/: app_state.rs  mod.rs  tab_states.rs
crates/rpglot-core/src/tui/widgets/: debug_popup.rs  detail_common.rs  header.rs  help.rs  mod.rs  pga_detail.rs  pge.rs  pge_detail.rs  pgi_detail.rs  pgl.rs  pgl_detail.rs  pgp.rs  pgp_detail.rs  pgs_detail.rs  pgt_detail.rs  prc.rs  quit_confirm.rs
crates/rpglot-core/src/tui/widgets/summary/: extract.rs  mod.rs  render_lines.rs
crates/rpglot-core/src/util/: mod.rs  process_io.rs  time_parser.rs
crates/rpglot-core/src/view/: common.rs  mod.rs  pga.rs  pge.rs  pgi.rs  pgl.rs  pgs.rs  pgt.rs
crates/rpglot-web/: Cargo.toml  README.md
crates/rpglot-web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/rpglot-web/frontend/src/: App.tsx  auth.ts  index.css
crates/rpglot-web/frontend/src/api/: client.ts  types.ts
crates/rpglot-web/frontend/src/components/: ActivityHeatmap.tsx  AnalysisModal.tsx  CalendarPopover.tsx  ColumnFilterPopover.tsx  DataTable.tsx  DetailPanel.tsx  Header.tsx  HeatmapTooltip.tsx  HelpModal.tsx  HighlightedCode.tsx  HintsBar.tsx  QueryModal.tsx  RichTooltip.tsx  SummaryPanel.tsx  TabBar.tsx  TabContent.tsx  TimeInput.tsx  Timeline.tsx  Tooltip.tsx
crates/rpglot-web/frontend/src/components/analysis/: IncidentTimeline.tsx  SubComponents.tsx  constants.ts  index.ts
crates/rpglot-web/frontend/src/hooks/: useSchema.ts  useSnapshot.ts  useTabState.ts  useTheme.ts  useTimezone.ts  useUrlState.ts
crates/rpglot-web/frontend/src/utils/: aggregation.ts  columnDescriptions.ts  columnHelp.tsx  formatters.ts  healthScore.ts  helpContent.ts  highlight.ts  reportExport.ts  smartFilters.ts  tabData.ts  thresholds.ts
crates/rpglot-web/src/: auth.rs  background.rs  handlers.rs  main.rs  openapi.rs  state.rs
crates/rpglot/src/: main.rs
crates/rpglotd/: Cargo.toml
crates/rpglotd-dump/: Cargo.toml
crates/rpglotd-dump/src/: main.rs
crates/rpglotd/src/: main.rs
docs/: metrics-reference.md  storage.md
src/: lib.rs  main.rs
src/collector/: collector.md  collector.rs  mod.rs  pg_collector.rs  traits.rs
src/collector/cgroup/: collector.rs  mod.rs  parser.rs
src/collector/mock/: filesystem.rs  scenarios.rs
src/collector/pg_collector/: activity.rs  bgwriter.rs  database.rs  indexes.rs  locks.rs  mod.rs  queries.rs  statements.rs  tables.rs
src/collector/procfs/: mod.rs  parser.rs  process.rs
src/provider/: live.rs  mod.rs
src/storage/: chunk.rs  interner.rs  manager.rs  storage.md
src/storage/model/: cgroup.rs  mod.rs  postgres.rs  snapshot.rs  system.rs
src/tui/: app.rs  event.rs  input.rs  mod.rs  models.rs  render.rs  state.rs  style.rs  table.rs  tui.md
src/tui/models/: mod.rs
src/tui/state/: app_state.rs  mod.rs  tab_states.rs
src/tui/widgets/: debug_popup.rs  detail_common.rs  header.rs  help.rs  mod.rs  pg_detail.rs  pg_indexes.rs  pg_locks.rs  pg_statements.rs  pg_statements_detail.rs  pg_tables.rs  pga.rs  pga_detail.rs  pgi.rs  pgi_detail.rs  pgl.rs  pgl_detail.rs  pgs.rs  pgs_detail.rs  pgt.rs  pgt_detail.rs  postgres.rs  prc.rs  prc_detail.rs  process_detail.rs  processes.rs  summary.rs  time_jump.rs
src/tui/widgets/postgres/: mod.rs  row_data.rs  styling.rs
src/tui/widgets/summary/: extract.rs  mod.rs  render_lines.rs
src/util/: container.rs  mod.rs  time_parser.rs
src/view/: activity.rs  indexes.rs  locks.rs  mod.rs  statements.rs
