[package]
name = "rpglot"
version = "0.1.5"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
panic = "abort"

[lib]
name = "rpglot"
path = "src/lib.rs"

[[bin]]
name = "rpglotd"
path = "src/bin/rpglotd.rs"

[[bin]]
name = "rpglot"
path = "src/bin/rpglot.rs"

[dependencies]
tikv-jemallocator = { version = "0.6.1" }
tikv-jemalloc-sys = { version = "0.6.1", features = ["stats"] }
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
tempfile = "3.10"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
postgres = "0.19"
native-tls = "0.2"
postgres-native-tls = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.4"
