[package]
name = "rpglot-core"
version = "0.1.6"
edition = "2024"

[features]
default = ["tui", "provider"]
provider = []
api = ["provider", "dep:utoipa", "dep:serde_json"]
tui = ["provider", "dep:ratatui", "dep:crossterm"]

[dependencies]
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
tempfile = "3.10"
postgres = "0.19"
native-tls = "0.2"
postgres-native-tls = "0.5"
tracing = "0.1"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
utoipa = { version = "5", optional = true }
serde_json = { version = "1.0", optional = true }
