[package]
name = "rpglot-core"
version = "0.1.7"
edition = "2024"

[features]
default = ["tui", "provider"]
provider = []
api = ["provider", "dep:utoipa", "dep:serde_json"]
tui = ["provider", "dep:ratatui", "dep:crossterm"]

[dependencies]
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
postgres = "0.19"
tracing = "0.1"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
utoipa = { version = "5", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
