[package]
name = "rpglot-core"
version.workspace = true
edition = "2024"

[features]
default = ["tui", "provider"]
provider = []
api = ["provider", "dep:utoipa", "dep:serde_json"]
tui = ["provider", "dep:ratatui", "dep:crossterm"]

[dependencies]
zstd = { version = "0.13", features = ["zdict_builder"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
postgres = "0.19"
tracing = "0.1"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
utoipa = { version = "5", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
