[package]
name = "rpglot"
version = "0.1.8"
edition = "2024"

[[bin]]
name = "rpglot"
path = "src/main.rs"

[dependencies]
rpglot-core = { path = "../rpglot-core", features = ["tui"] }
tikv-jemallocator = "0.6.1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
