[package]
name = "rpglotd-dump"
version.workspace = true
edition = "2024"

[[bin]]
name = "rpglotd-dump"
path = "src/main.rs"

[dependencies]
rpglot-core = { path = "../rpglot-core", default-features = false }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
crc32fast = "1"
