[package]
name = "rpglotd"
version = "0.1.8"
edition = "2024"

[[bin]]
name = "rpglotd"
path = "src/main.rs"

[dependencies]
rpglot-core = { path = "../rpglot-core", default-features = false }
tikv-jemallocator = "0.6.1"
tikv-jemalloc-sys = { version = "0.6.1", features = ["stats"] }
postcard = { version = "1", features = ["alloc"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.4"
